<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_make_running_party"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close_24"
        app:title="파티 생성"
        app:titleTextAppearance="@style/TextAppearance.WantRunning.ToolbarTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_make_running_party_complete"
        app:layout_constraintTop_toBottomOf="@id/tb_make_running_party">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:id="@+id/ll_make_running_party_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_running_party_title"
                    android:textColor="@color/grayscale_90"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/active_red"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_make_running_party_title"
                style="@style/Widget.WantRunning.TextInputLayout.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_make_running_party_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/make_running_party_title_hint"
                    android:textColorHint="@color/grayscale_20" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_make_running_party_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/til_make_running_party_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_running_party_region"
                    android:textColor="@color/grayscale_90"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/active_red"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_make_running_party_region_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_region">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_make_running_party_region"
                    style="@style/Widget.WantRunning.TextInputLayout.Base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_make_running_party_region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/make_running_party_region_hint"
                        android:textColorHint="@color/grayscale_20" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_make_running_party_region"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/btn_stroke_grayscale5_radius_8dp"
                    android:src="@drawable/ic_location_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_make_running_party_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_region_input">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_running_party_datetime"
                    android:textColor="@color/grayscale_90"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/active_red"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_make_running_party_datetime_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_datetime">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_make_running_party_date"
                    style="@style/Widget.WantRunning.TextInputLayout.Base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    app:errorEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_make_running_party_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/make_running_party_date_hint"
                        android:textColorHint="@color/grayscale_20" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_make_running_party_time"
                    style="@style/Widget.WantRunning.TextInputLayout.Base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:errorEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_make_running_party_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/make_running_party_time_hint"
                        android:textColorHint="@color/grayscale_20" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_make_running_party_datetime"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/btn_stroke_grayscale5_radius_8dp"
                    android:src="@drawable/ic_calendar_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_make_running_party_personnel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_datetime_input">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_running_party_personnel"
                    android:textColor="@color/grayscale_90"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="*"
                    android:textColor="@color/active_red"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_make_running_party_personnel_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_personnel">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_make_running_party_personnel_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_stroke_grayscale5_radius_8dp"
                    android:src="@drawable/ic_minus_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_make_running_party_personnel"
                    style="@style/Widget.WantRunning.TextInputLayout.Base"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    app:errorEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_make_running_party_personnel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_make_running_party_personnel_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_stroke_grayscale5_radius_8dp"
                    android:src="@drawable/ic_plus_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_make_running_party_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/make_running_party_level"
                android:textColor="@color/grayscale_90"
                app:layout_constraintTop_toBottomOf="@id/ll_make_running_party_personnel_input" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_make_running_party_complete"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/btn_primary2"
        android:text="@string/make_running_party_submit"
        android:textColor="@color/color_btn_primary2_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>